kubernets/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: brain-gym
  labels:
    istio-injection: enabled
