kubernets/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brain-gym-service
  namespace: brain-gym
  labels:
    app: brain-gym
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: brain-gym
