kubernets/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: brain-gym-gateway
  namespace: brain-gym
spec:
  selector:
    istio: istio-ingressgateway-admin
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: brain-gym-tls
    hosts:
    - brain-gym.example.com
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - brain-gym.example.com
    tls:
      httpsRedirect: true
